[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scietex.logging"
dynamic = ["version"]
description = "Asyncio logging handlers"
authors = [
  { name = "Anton Bondarenko", email = "bond.anton@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/bond-anton/scietex.logging"
"Bug Tracker" = "https://github.com/bond-anton/scietex.logging/issues"

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
valkey = ["valkey-glide~=2.2.0"]

# Specify multiple logging options combined
all = [
    "redis>=5.0.0",
    "valkey-glide~=2.2.0",
]
test = ["flake8", "pytest", "pytest-asyncio"]
lint = ["pylint"]
dev = [
    "tox>=4.30.3",
]

[tool.setuptools.dynamic]
version = {attr = "scietex.logging.__version__"}

[tool.setuptools.package-data]
"scietex.logging" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
